--- a/Onn-4/Javascript/skilaverkefni_2/main.css
+++ b/Onn-4/Javascript/skilaverkefni_2/main.css
@@ -1,3 +1,17 @@
 html {
     background-color: black;
 }
+
+body {
+    margin: 0;
+}
+
+.score {
+    position: absolute;
+    margin: 0;
+    z-index: 1;
+    left: 15px;
+
+    color: white;
+}
+
